--- a/src/components/pokemonCard/pokemonCard.scss
+++ b/src/components/pokemonCard/pokemonCard.scss
@@ -1,4 +1,4 @@
-@use "../../styles/variables.scss" as *;
+@use '../../styles/variables.scss' as *;
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -29,7 +29,6 @@
 
   strong {
     font-size: 20px;
-
   }
 
   .card:hover {
