--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,76 +1,76 @@
-@use "./variables.scss" as *;
+@use './variables.scss' as *;
 
 .pl-0 {
-    padding-left: 0px !important;
+  padding-left: 0px !important;
 }
 
 .pl-1 {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .pl-2 {
-    padding-left: 20px !important;
+  padding-left: 20px !important;
 }
 
 .pl-3 {
-    padding-left: 30px;
+  padding-left: 30px;
 }
 
 .pr-0 {
-    padding-right: 0px !important;
+  padding-right: 0px !important;
 }
 
 .pr-1 {
-    padding-right: 10px;
+  padding-right: 10px;
 }
 
 .pr-2 {
-    padding-right: 20px !important;
+  padding-right: 20px !important;
 }
 
 .pr-3 {
-    padding-right: 30px;
+  padding-right: 30px;
 }
 
 .pt-1 {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 .pt-2 {
-    padding-top: 20px !important;
+  padding-top: 20px !important;
 }
 
 .pt-3 {
-    padding-top: 30px;
+  padding-top: 30px;
 }
 
 .flex-column {
-    @include flex-col(center, center);
+  @include flex-col(center, center);
 }
 
 .flex-row {
-    @include flex-row(center, center);
+  @include flex-row(center, center);
 }
 
 .disabled-click {
-    cursor: default !important;
+  cursor: default !important;
 }
 
 .horizontal-line {
-    width: 1px;
-    height: 45px;
-    background-color: $line-color;
+  width: 1px;
+  height: 45px;
+  background-color: $line-color;
 }
 
 .text-caps {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .app-loader-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
 }
 
 // .hide {
