--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
+@use 'sass:map';
+
 $breakpoints: (
   xs: 0,
   sm: 576px,
@@ -62,48 +64,48 @@ $heading-6: (
 }
 
 @mixin sm {
-  @media (max-width: map-get($breakpoints, 'sm')) {
+  @media (max-width: map.get($breakpoints, 'sm')) {
     @content;
   }
 }
 
 // Small devices (landscape phones, less than 768px)
 @mixin md {
-  @media (max-width: map-get($breakpoints, 'md')) {
+  @media (max-width: map.get($breakpoints, 'md')) {
     @content;
   }
 }
 
 // Medium devices (tablets, less than 992px)
 @mixin lg {
-  @media (max-width: map-get($breakpoints, 'lg')) {
+  @media (max-width: map.get($breakpoints, 'lg')) {
     @content;
   }
 }
 
 // Large devices (desktops, less than 1200px)
 @mixin xl {
-  @media (max-width: map-get($breakpoints, 'xl')) {
+  @media (max-width: map.get($breakpoints, 'xl')) {
     @content;
   }
 }
 
 // X-Large devices ( desktops, less than 1400px)
 @mixin xxl {
-  @media (max-width: map-get($breakpoints, 'xxl')) {
+  @media (max-width: map.get($breakpoints, 'xxl')) {
     @content;
   }
 }
 
 // X-Large devices (large desktops, less than 1800px)
 @mixin xxxl {
-  @media (max-width: map-get($breakpoints, 'xxxl')) {
+  @media (max-width: map.get($breakpoints, 'xxxl')) {
     @content;
   }
 }
 
 @mixin mix {
-  @media (min-width: map-get($breakpoints, 'xs')) and (max-width: map-get($breakpoints, 'lg')) {
+  @media (min-width: map.get($breakpoints, 'xs')) and (max-width: map.get($breakpoints, 'lg')) {
     @content;
   }
 }
