--- a/src/components/pokemonCard/pokemonCard.scss
+++ b/src/components/pokemonCard/pokemonCard.scss
@@ -11,6 +11,13 @@
   overflow: hidden;
   cursor: pointer;
 
+  // Button-specific styles for accessibility
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  padding: 0;
+  font-family: inherit;
+
   img {
     width: 122px;
     height: 122px;
